# fitmetrics

./: .gitignore  DOCS.md  README.md  TASKS.md  main.py  pyproject.toml  run_all.py  run_all_output.txt  test_agent.py  test_image_fixes.py  test_retrieval.py  verify_images.py
.streamlit/: config.toml
config/: config.yaml
data/eval/: failure_cases.json  family_results.csv  rejected_rows.csv  results.csv  results_llama.csv  results_qwen.csv  summary_table.txt
data/raw/: user_profile.json
data/raw/lifts/: strength.csv
scripts/: generate_report_figures.py  plot_results.py  refactor_lift_workout_data.py
src/: config.py
src/agent/: __init__.py  graph.py  muscle_filter.py  router.py  state.py  tools.py
src/embeddings/: __init__.py  image_embedder.py  index_builder.py  text_embedder.py
src/evaluation/: __init__.py  error_analysis.py  run_evaluation.py
src/fit_support/: __init__.py  config.py
src/fit_support/config/: __init__.py  settings.py
src/fit_support/domain/: __init__.py  personalization.py  schemas.py
src/fit_support/embeddings/: __init__.py  embedder.py
src/fit_support/eval/: __init__.py  harness.py  rubric.py
src/fit_support/graph/: __init__.py  workflow.py
src/fit_support/ingest/: __init__.py  base.py  images.py  (+4 more)
src/ingestion/: __init__.py  loaders.py  models.py  pipeline.py  preprocess.py  validators.py
src/retrieval/: __init__.py  clip_classifier.py  search.py
tests/: benchmark_queries.json  test_eval_harness.py  test_ingestion_pipeline.py  test_muscle_filter.py  test_retrieval.py  test_retrieval_pipeline.py
ui/: app.py
(+7 files in other folders)
